crates/ddlog-syntax/tests/inline/pass/indiscriminantly_modify.dl
// kind:item
input input input input input output extern output input relation Foo()
